--- a/app/views/api/_indexNewsApiIreland.html.erb
+++ b/app/views/api/_indexNewsApiIreland.html.erb
@@ -5,7 +5,7 @@
   <%= csrf_meta_tags %>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <div class="jumbotron" id="custom_jumbo">
-    <h1 class="display-4">Social Media Feed and News</h1>
+    <h1 class="display-4">Social Media News Feed</h1>
 
   </div>
   <div class="col-lg-4 ">
