--- a/app/views/devise/menu/_registration_items.html.erb
+++ b/app/views/devise/menu/_registration_items.html.erb
@@ -1,4 +1,5 @@
 <% if user_signed_in? %>
+  <!-- Device lecture 6 tutorial-->
   <li>
     <%= link_to('Edit registration', edit_user_registration_path) %>
   </li>
