--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,15 +1,15 @@
 <div class="jumbotron" id="custom_jumbo">
 
-<h4>Comments in Article: <%= (@article.title) %></h4>
+<h5>Comments in Article: <%= (@article.title) %></h5>
 
 <!-- View article comments  -->
 <% for comment in @comments %>
   <div class="card">
     <div class="card-block">
 
-      <li><p><span class="fas fa-at " style="width:20px;color:black;font-weight:bold;font-size:14px"></span><%=(comment.content)%></p></li>
+      <li><h6><span class="fas fa-at " style="width:20px;color:black;font-weight:bold;font-size:14px"></span><%=(comment.content)%></h6></li>
 
-      <p class="card-text" style="color:black;font-size:11px"> Commented By: <%= comment.user.email %> </p>
+      <h5 class="card-text" style="color:black;font-size:11px"> Commented By: <%= comment.user.email %> </h5>
 
       <br>
       <br>
@@ -20,7 +20,7 @@
 
           <%= link_to "Edit", edit_article_comment_path(@article,comment), class: "btn btn-outline-info" %>
 
-          <%= link_to "Delete", article_comment_path(@article, comment), class: "btn btn-danger", method: :delete, data: {confirm: "Are you sure?"} %>
+          <%#= link_to "Delete", article_comment_path(@article, comment), class: "btn btn-danger", method: :delete, data: {confirm: "Are you sure?"} %>
 
       <% end %>
 
