--- a/app/views/landingpage/index.html.erb
+++ b/app/views/landingpage/index.html.erb
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-
   <title>Welcome to MediCare</title>
   <%= csrf_meta_tags %>
   <br>
@@ -17,8 +15,8 @@
   var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(script, s);  })();</script>
 
   <div class="jumbotron">
-    <h1 class="display-4">MediCare!</h1>
-    <!--Load the Breadcrumps last session(cookee)  -->
+    <h1 class="display-4">MediCare</h1>
+    <!--Load the Breadcrumbs last session ID ()  -->
     <% if @breadcrumbs && @breadcrumbs.any? %>
       <div class ='alert alert-info'>
         <% @breadcrumbs[0..0].each do |breadcrumb| %>
@@ -26,16 +24,12 @@
         <% end %>
       </div>
     <%end%>
-
   </div>
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
 </head>
-
 <body>
 <div class="overlay"></div>
-
 <div class="masthead" data-turbolinks="false">
   <div class="masthead-bg"></div>
   <div class="container h-100">
@@ -45,6 +39,7 @@
           <!--Link to custom image --->
           <%= link_to image_tag("healthcare.jpg", :class => "img-fluid"), "/" %>
           <div class="row"><br></div>
+          <!--yield rendering page --->
           <%= yield %>
           <div class="container">
           </div>
