--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
   <div class="footer-copyright text-center py-3">
 
     <small>
-      ©2022 Copyright <a href="https://openweathermap.org/widgets-constructor">Open weather map</a>
+      ©2022 Copyright</a>
       by <a href="Addlink ">Antonio Penna</a>
     </small>
 
